feat(tenant): create, read, update, and delete tenant
